// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalDetailLikers /> should not render anything when proposal has no likers 1`] = `""`;

exports[`<ProposalDetailLikers /> should render a <Modal /> when proposal has likers 1`] = `
<Fragment>
  <a
    className="tags-list__tag"
    onClick={[Function]}
    title="list-of-favorites"
  >
    <ForwardRef(Relay(ProposalDetailLikersLabel))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "id": "1",
          "likers": Array [
            Object {
              "id": "1",
            },
            Object {
              "id": "2",
            },
          ],
        }
      }
    />
  </a>
  <ForwardRef(Relay(Connect(InjectIntl(ProposalDetailLikersModal))))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "1",
        "likers": Array [
          Object {
            "id": "1",
          },
          Object {
            "id": "2",
          },
        ],
      }
    }
    show={true}
  />
</Fragment>
`;

exports[`<ProposalDetailLikers /> should render a div when specified 1`] = `
<Fragment>
  <div
    className="tags-list__tag"
    onClick={[Function]}
    title="list-of-favorites"
  >
    <ForwardRef(Relay(ProposalDetailLikersLabel))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "id": "1",
          "likers": Array [
            Object {
              "id": "1",
            },
            Object {
              "id": "2",
            },
          ],
        }
      }
    />
  </div>
  <ForwardRef(Relay(Connect(InjectIntl(ProposalDetailLikersModal))))
    proposal={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "id": "1",
        "likers": Array [
          Object {
            "id": "1",
          },
          Object {
            "id": "2",
          },
        ],
      }
    }
    show={true}
  />
</Fragment>
`;
